--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   
   a { text-decoration: none; }
   a:hover { text-decoration: underline; }
+  *, *:after, *:before {
+    box-sizing: border-box;
+  }
+  
