--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,55 @@
+@font-face {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("Nunito"),
+       local("Nunito-Regular"),
+       url(/fonts/Nunito-Regular.woff2) format("woff2"),
+       url(/fonts/nunito-regular.woff) format("woff");
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+@font-face {
+  font-family: "Nunito-Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: local("Nunito-Bold"),
+       url(/fonts/Nunito-Bold.woff2) format("woff2"),
+       url(/fonts/Nunito-Bold.woff) format("woff");
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+@font-face {
+  font-family: "Nunito-Black";
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: local("Nunito-Black"),
+       url(/fonts/Nunito-Black.woff2) format("woff2"),
+       url(/fonts/Nunito-Black.woff) format("woff");
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+@font-face {
+  font-family: "OpenSans";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("OpenSans"),
+       url(/fonts/OpenSans-Regular.woff2) format("woff2"),
+       url(/fonts/opensans-regular.woff) format("woff");
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+@font-face {
+  font-family: "OpenSans-Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: local("OpenSans-Bold"),
+       url(/fonts/OpenSans-Bold.woff2) format("woff2"),
+       url(/fonts/opensans-bold.woff) format("woff");
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
@@ -8,7 +60,12 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     outline: none;
   }
   html { height: 101%; } /* always display scrollbars */
-  body { font-size: 62.5%; line-height: 1; font-family: Arial, Tahoma, Verdana, sans-serif; }
+  body { 
+    font-size: 62.5%; 
+    line-height: 1; 
+    font-family: OpenSans, Arial, Tahoma, Verdana, sans-serif;
+    color: #24201E;
+  }
   
   article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
   ol, ul { list-style: none; }
@@ -26,5 +83,30 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   a:hover { text-decoration: underline; }
   *, *:after, *:before {
     box-sizing: border-box;
+  }
+  
+p {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+  
+h1 {
+    font-family: "Nunito-Bold";
+    font-style: normal;
+    font-weight: 700;
+    line-height: 64px;
+    font-size: 64px;
+  }
+
+h2 {
+    font-family: 'Nunito-Bold';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
   }
   
