--- a/css/style.css
+++ b/css/style.css
@@ -110,4 +110,135 @@ h2, h3 {
     font-size: 48px;
     line-height: 64px;
   }
+
+
+
+  /*блоки*/
+
+  .container {
+    margin: 0 auto;
+    max-width: 1200px;
+  }
+  .container-item {
+      margin: 80px 0px 80px;
+      padding: 0 15px;
+  }
   
+  .center {
+    text-align: center;
+    }
+
+
+/*кнопки*/
+  
+  .button-one {
+    font-family: 'OpenSans-Bold';
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
+    color: #292929;
+    background: #F8F8F8;
+    padding: 15px 30px;
+    border: 1px solid #F8F8F8;
+    border-radius: 5px;
+    text-transform: none;
+  }
+  .button-one:hover {
+    color: #AE00D4;
+    border: 1px solid #AE00D4;
+  }
+  .button-two {
+    font-family: 'OpenSans-Bold';
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
+    color: #AE00D4;
+    background: #fff;
+    padding: 15px 30px;
+    border: 1px solid #AE00D4;
+    border-radius: 5px;
+    text-transform: none;
+  }
+  .button-two:hover {
+    color: #fff;
+    background: #AE00D4;
+  }
+  .button-tree {
+    font-family: 'OpenSans-Bold';
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
+    color: #fff;
+    background: #AE00D4;
+    padding: 15px 30px;
+    border: 1px solid #AE00D4;
+    border-radius: 5px;
+    text-transform: none;
+  }
+  .button-tree:hover {
+    border: 1px solid #9C16B9;
+    background: #9C16B9;
+  }
+
+
+
+  .header {
+    padding: 0 15px;
+  }
+  .header-nav {
+    justify-content: space-between;
+  }
+  .header-phone{
+    display: block;
+    padding-top: 25px;
+  }
+
+  .header-phone a{
+    font-weight: 700;
+    font-size: 16px;
+    color: #292929;
+  }
+  .header-phone a{
+    text-decoration: none;
+  }
+  .header-phone a:hover{
+    color: #AE00D4;
+  }
+  .header-phone_text {
+    font-size: 16px;
+  }
+
+  .nav-item a{
+    font-family: 'Nunito-Bold';
+    font-size: 18px !important;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+    color: #292929 !important;
+    text-transform: none !important;
+  }
+  .nav-item a:hover {
+    color: #AE00D4 !important;
+  }
+  .nav-item::after{
+    position: relative;
+    content: '•';
+    color: #AE00D4;
+    font-size: 40px;
+    left: 50%;
+    top: -30px;
+  }
+
+
+.h1 {
+    margin-bottom: 50px;
+    margin-top: 85px;
+    max-width: 555px;
+}
+
+.h1-text {
+  font-size: 18px;
+  line-height: 26px;
+  margin-bottom: 50px;
+  max-width: 555px;
+}
