--- a/style.css
+++ b/style.css
@@ -546,6 +546,12 @@ span.menu-one {
   color: #252220;
   text-decoration: none;
 }
+.footer-content_item{
+  display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .footer-content_item_requisites, .footer-content_item_adress {
   font-weight: 400;
     font-size: 16px;
@@ -878,6 +884,7 @@ ul.section-four-text>li {
 .section-five-form>fieldset>div>input {
   padding: 30px;
   border-radius: 5px;
+  font-size: 1.2rem;
 }
 
 .section-five-form>fieldset>div>input::-webkit-input-placeholder {
